fixed scrollbar issue on deck edit

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -323,7 +323,6 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .deck-edit-card-list {
   min-width: 600px;
-  overflow-y: scroll;
 }
 
 .deck-edit-card-list-commander {
